--- a/Coffitello/styles/create-drink.css
+++ b/Coffitello/styles/create-drink.css
@@ -31,7 +31,7 @@
   flex: 1 1 0px;
   padding: 15px;
   box-sizing: border-box;
-  border: 2px solid var(--border-color);
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.3);
   border-radius: var(--main-border-radius);
 }
 
@@ -64,7 +64,8 @@
 
 .drink-description-block {
   display: flex;
-  border: 2px solid var(--border-color);
+  margin-bottom: 10px;
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.4);
   border-radius: var(--main-border-radius);
 }
 
@@ -100,7 +101,6 @@ input {
 textarea {
   font-family: 'Gelasio', serif;
   box-sizing: border-box;
-  border-width: 2px;
   background-color: var(--primary-background-color);
   border-radius: var(--input-border-radius);
 }
@@ -135,7 +135,7 @@ input[type='number']::-webkit-outer-spin-button {
   border: none;
   display: block;
   margin: 15px auto;
-  padding: 3px 15px;
+  padding: 10px 30px;
   font-size: var(--primary-font-size);
   transition: transform 150ms ease;
   background: var(--primary-text-color);
@@ -157,11 +157,11 @@ input[type='number']::-webkit-outer-spin-button {
 @media only screen and (max-device-width : 550px) {
   :root {
     --input-border-radius: 15px;
-    --primary-font-size: 2.5em;
-    --primary-font-size-sm: 2.1em;
+    --primary-font-size: 2.7em;
+    --primary-font-size-sm: 2.5em;
   }
   .create-drink-form {
-    width: 70%;
+    width: 80%;
     border: none;
   }
 
@@ -175,6 +175,7 @@ input[type='number']::-webkit-outer-spin-button {
   }
 
   .drink-description-block {
+    margin-bottom: 30px;
     flex-direction: column;
     border: none;
   }
@@ -182,7 +183,6 @@ input[type='number']::-webkit-outer-spin-button {
   .description-block {
     width: 100%;
     margin-bottom: 20px;
-    border: 2px solid var(--border-color);
     border-radius: var(--main-border-radius);
   }
 
@@ -192,7 +192,7 @@ input[type='number']::-webkit-outer-spin-button {
   }
 
   #choose-category-block, #choose-ingredient-block, #ingredients-values-block {
-    margin: 0 0 10px 0;
+    margin: 0 0 30px 0;
   }
 
   .choose-block {
