--- a/Coffitello/styles/login.css
+++ b/Coffitello/styles/login.css
@@ -1,11 +1,6 @@
 :root {
-  --primary-background-color: #F9F4EF;
-  --primary-text-color: #716040;
-  --border-color: #020826;
-  --main-border-radius: 10px;
-  --input-border-radius: 0px;
-  --primary-font-size: 1.2em;
-  --primary-font-size-sm: 1.1em;
+  --login-block-font-size: 20px;
+  --login-block-font-size-sm: 18px;
 }
 
 form {
@@ -13,17 +8,13 @@ form {
   height: 100%;
 }
 
-input:focus{
-  outline: none;
-}
-
 .login-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 50px auto 0;
-  width: 35%;
-  border-radius: var(--main-border-radius);
+  max-width: 700px;
+  border-radius: 10px;
   box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
   padding: 40px;
 }
@@ -37,7 +28,7 @@ input:focus{
 }
 
 .login-form h2 {
-  font-family: 'Gelasio', serif;
+  font-family: var(--primary-text-font);
   font-size: 2em;
   margin: 0 auto 15px;
 }
@@ -47,8 +38,8 @@ input:focus{
 }
 
 .login-block input {
-  font-size: var(--primary-font-size);
-  border-radius: var(--input-border-radius);
+  font-size: var(--login-block-font-size);
+  border-radius: 0;
   border: 0;
   border-bottom: 1px solid #747474;
   box-shadow: none;
@@ -57,20 +48,21 @@ input:focus{
   width: 100%;
 }
 
-.login-block .actions {
+.actions {
   display: flex;
+  justify-content: center;
   width: 100%;
 }
 
-.login-block button, #register-btn {
+button {
+  border: 0;
   width: 50%;
   padding: 15px;
-  font-size: var(--primary-font-size-sm);
+  font-size: var(--login-block-font-size-sm);
   transition: transform 250ms ease, opacity 0.3s linear, background-color 0.3s linear;
 }
 
 #login-btn {
-  border: 0;
   color: var(--primary-background-color);
   background-color: var(--primary-text-color);
 }
@@ -80,35 +72,40 @@ input:focus{
 }
 
 #register-btn {
-  border: 0;
   margin-right: 1px;
   border: solid 1px var(--primary-text-color);
   color: var(--primary-text-color);
   background-color: var(--primary-background-color);
 }
 
+#context-switch {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: var(--login-block-font-size-sm);
+  font-family: var(--primary-text-font);
+}
+
+#switch-link {
+  font-weight: 500;
+  text-decoration: underline;
+}
+
 #register-btn:hover {
   background-color: #e4decf;
 }
 
-@media only screen and (max-device-width : 1200px) {
-  .login-form {
-    height: 500px;
-    width: 60%;
-  }
-}
-
 @media only screen and (max-device-width : 550px) {
   :root {
-    --main-border-radius: 30px;
-    --primary-font-size: 3em;
-    --primary-font-size-sm: 2.3em;
+    --login-block-font-size: 46px;
+    --login-block-font-size-sm: 40px;
   }
 
   .login-form {
     margin-top: 50px;
-    height: 500px;
+    height: 600px;
     width: 80%;
+    max-width: 1000px;
   }
 
   .login-block {
