--- a/Coffitello/styles/main.css
+++ b/Coffitello/styles/main.css
@@ -6,20 +6,21 @@
     --primary-text-color: #716040;
     --light-grey-color: #CCC;
     --main-border-radius: 30px;
-    --primary-font-size: 1.2em;
-    --primary-font-size-sm: 1.1em;
+    --input-border-radius: 5px;
+    --primary-text-font: 'Gelasio', serif;
+    --italic-font: 'Dancing Script', cursive;
   }
   
   * {
     margin: 0;
     padding: 0;
     font-weight: lighter;
+    box-sizing: border-box;
   }
   
   main {
     min-height: calc(100vh - 60px);
     padding: 150px 0 50px;
-    box-sizing: border-box;
   }
   
   body {
@@ -56,7 +57,7 @@
   }
 
   p {
-    font-family: 'Gelasio', serif;
+    font-family: var(--primary-text-font);
   }
 
   .header-left-title a {
@@ -72,9 +73,8 @@
   }
 
   input, button {
-    box-sizing: border-box;
     text-align: center;
-    font-family: 'Gelasio', serif;
+    font-family: var(--primary-text-font);
     background-color: var(--primary-background-color);
     border-radius: var(--input-border-radius);
   }
@@ -83,14 +83,16 @@
     border: 0;
     -webkit-appearance: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+    transition: all 300ms ease;
   }
 
   input:focus, textarea:focus {
     outline: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7)
   }
 
   .italic-font {
-    font-family: 'Dancing Script', cursive;
+    font-family: var(--italic-font);
   }
 
   /* HEADER */
@@ -98,7 +100,6 @@
     position: fixed;
     z-index: 1000;
     width: 100%;
-    box-sizing: border-box;
     background-color: var(--primary-background-color);
     border-bottom: 4px solid rgba(140, 120, 81, 0.7);
     padding: 15px 50px;
@@ -117,7 +118,7 @@
     top: 25px;
     right: 10px;
     width: 650px;
-    font-family: 'Gelasio';
+    font-family: var(--primary-text-font);
     justify-content: space-evenly;
   }
   
@@ -147,7 +148,6 @@
   }
   
   footer {
-    box-sizing: border-box;
     width: 100%;
     height: 60px;
     z-index: 2;
@@ -159,18 +159,13 @@
     justify-content: center;
   }
   
-  footer .copyright {
+  .copyright {
     color: var(--primary-background-color);
     margin-left: 0;
     margin-right: auto;
   }
 
   @media only screen and (max-device-width : 550px) {
-    :root {
-      --primary-font-size: 2.5em;
-      --primary-font-size-sm: 2.1em;
-    }
-    
     main {
       padding: 180px 0 100px;
     }
@@ -216,7 +211,6 @@
     }
 
     .menu-list li {
-      display: block;
       padding: 20px;
       background-color: var(--primary-background-color);
       font-size: 3em;
