--- a/Coffitello/styles/description.css
+++ b/Coffitello/styles/description.css
@@ -123,6 +123,9 @@
 }
 
 #comment-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
   width: 70%;
 }
 
@@ -138,10 +141,9 @@
 }
 
 #add-comment-btn {
-  float: right;
   border: none;
-  margin: 15px auto;
-  padding: 3px 15px;
+  margin: 15px 0;
+  padding: 8px 22px;
   font-size: var(--desc-block-font-size);
   transition: transform 150ms ease;
   background: var(--primary-text-color);
