--- a/Coffitello/styles/login.css
+++ b/Coffitello/styles/login.css
@@ -54,28 +54,18 @@ form {
   width: 100%;
 }
 
-button {
-  border: 0;
+.action-button {
   width: 50%;
   padding: 15px;
+  border: 0;
   font-size: var(--login-block-font-size-sm);
+  color: var(--primary-background-color);
+  background-color: var(--primary-text-color);
   transition: transform 250ms ease, opacity 0.3s linear, background-color 0.3s linear;
 }
 
-#login-btn {
-  color: var(--primary-background-color);
-  background-color: var(--primary-text-color);
-}
-
-#login-btn:hover {
+.action-buttonhover {
   opacity: 0.8;
-}
-
-#register-btn {
-  margin-right: 1px;
-  border: solid 1px var(--primary-text-color);
-  color: var(--primary-text-color);
-  background-color: var(--primary-background-color);
 }
 
 #context-switch {
@@ -89,10 +79,6 @@ button {
 #switch-link {
   font-weight: 500;
   text-decoration: underline;
-}
-
-#register-btn:hover {
-  background-color: #e4decf;
 }
 
 @media only screen and (max-device-width : 550px) {
