--- a/Coffitello/styles/main.css
+++ b/Coffitello/styles/main.css
@@ -22,6 +22,11 @@
     min-height: calc(100vh - 60px);
     padding: 150px 0 50px;
   }
+
+  .light-mode {
+    font-size: 1.6em;
+    color: var(--primary-background-color);
+  }
   
   body {
     font-family: Helvetica Neue Light, Helvetica, Arial, sans-serif;
@@ -84,6 +89,11 @@
     -webkit-appearance: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
     transition: all 300ms ease;
+    color: var(--primary-text-color);
+  }
+
+  input::placeholder, textarea::placeholder {
+    color: var(--primary-text-color);
   }
 
   input:focus, textarea:focus {
@@ -156,13 +166,11 @@
     padding: 0 50px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
   }
   
   .copyright {
     color: var(--primary-background-color);
-    margin-left: 0;
-    margin-right: auto;
   }
 
   @media only screen and (max-device-width : 550px) {
@@ -172,6 +180,10 @@
 
     h1 {
       font-size: 3.7em;
+    }
+
+    .light-mode {
+      font-size: 2.6em;
     }
 
     header {
@@ -187,8 +199,9 @@
       z-index: 10;
       left: 0;
       bottom: 0;
-      height: 80px;
+      height: 95px;
       font-size: 1.5em;
+      padding: 0 65px;
     }
 
     .bars-icon {
