Fixed transition of the elements. Add empty bar message to the Favorites page

--- a/Coffitello/styles/catalog.css
+++ b/Coffitello/styles/catalog.css
@@ -19,7 +19,7 @@
   flex-direction: column;
   text-align: center;
   padding: 10px;
-  transition: all 400ms ease;
+  transition: transform 400ms ease;
 }
 
 .catalog-item:hover {
