--- a/Coffitello/styles/main.css
+++ b/Coffitello/styles/main.css
@@ -88,7 +88,7 @@
     border: 0;
     -webkit-appearance: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
-    transition: all 300ms ease;
+    transition: box-shadow 300ms ease;
     color: var(--primary-text-color);
   }
 
